# glowy-triangle

./: .gitignore  CMakeLists.txt  color-test.cpp  color.cpp  color.h  defs.h  goals.md  main.cpp
Lib/: Maybe.hpp
Parts/: AStar.cpp  AStar.hpp  AStarTest.cpp  AStarTest.hpp  Algorithm.hpp  CornellBox.cpp  CornellBox.hpp  GameOfLife.cpp  GameOfLife.hpp  HotPlate.cpp  HotPlate.hpp  Screen.cpp  Screen.hpp  SmallPT.cpp  SmallPT.hpp  Snake.cpp  Snake.hpp  Vec3.hpp
